libintl: Determine if _nl_msg_cat_cntr exists before use

Using GNU gettext does not guarantee that GNU libintl will be used. This
assumption breaks the build when using musl libc (which does implement
libintl, but does so without using internal GNU symbols).

BUG:365917
FIXED-IN:5.49.0